fixed row wrap for services floor

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -5,6 +5,7 @@
 
 .nav:hover {
     font-weight: bold;
+    color: #3c0c15;
 }
 
 .nav-bar {
